Add endpoint for getting section threads
