# mainServer/docs/swagger.json
@@ -119,7 +119,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Thread"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Thread"
+                            }
                         }
                     },
                     "400": {
@@ -150,6 +153,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.Thread"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "section",
+                        "name": "section",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -180,7 +189,7 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get all threads for a commit",
+                "summary": "Get all section threads for a commit",
                 "parameters": [
                     {
                         "type": "integer",
@@ -201,7 +210,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Thread"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.SectionThread"
+                            }
                         }
                     },
                     "400": {
@@ -1029,17 +1041,18 @@
                 }
             }
         },
-        "models.Thread": {
+        "models.SectionThread": {
             "type": "object",
             "required": [
                 "articleId",
-                "comment"
+                "comments",
+                "section"
             ],
             "properties": {
                 "articleId": {
                     "type": "integer"
                 },
-                "comment": {
+                "comments": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/entities.Comment"
@@ -1047,6 +1060,36 @@
                 },
                 "id": {
                     "type": "integer"
+                },
+                "section": {
+                    "type": "string"
+                },
+                "specificId": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Thread": {
+            "type": "object",
+            "required": [
+                "articleId",
+                "comments"
+            ],
+            "properties": {
+                "articleId": {
+                    "type": "integer"
+                },
+                "comments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entities.Comment"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "specificId": {
+                    "type": "string"
                 }
             }
         },
