# mainServer/models/thread.go
@@ -15,7 +15,7 @@ type SectionThread struct {
 	Id         int64              `json:"id"`
 	ArticleId  int64              `json:"articleId"       binding:"required"`
 	SpecificId string             `json:"specificId"`
-	Comment    []entities.Comment `json:"comment"         binding:"required"`
+	Comments   []entities.Comment `json:"comments"         binding:"required"`
 	Section    string             `json:"section" binding:"required"`
 }
 
