# mainServer/services/interfaces/commitSectionThread.go
@@ -4,5 +4,5 @@ import "mainServer/models"
 
 type CommitSectionThreadService interface {
 	StartCommitSectionThread(cid string, tid int64, section string) (int64, error)
-	GetCommitSectionThreads(sid string, tid int64) ([]models.SectionThread, error)
+	GetCommitSectionThreads(sid string, aid int64) ([]models.SectionThread, error)
 }
